add partition mount UI resizing code

--- a/HDL-Batch-installer-SRC/wxsmith/CopyHDD.wxs
+++ b/HDL-Batch-installer-SRC/wxsmith/CopyHDD.wxs
@@ -2,8 +2,11 @@
 <wxsmith>
 	<object class="wxDialog" name="CopyHDD">
 		<id_arg>0</id_arg>
+		<style>wxDEFAULT_DIALOG_STYLE|wxRESIZE_BORDER</style>
 		<object class="wxFlexGridSizer" variable="FlexGridSizer1" member="no">
 			<cols>1</cols>
+			<growablecols>0</growablecols>
+			<growablerows>0</growablerows>
 			<object class="sizeritem">
 				<object class="wxBoxSizer" variable="BoxSizer1" member="no">
 					<object class="sizeritem">
@@ -13,7 +16,7 @@
 								<object class="wxChoice" name="ID_CHOICE1" variable="Source" member="yes">
 									<handler function="OnHDDsSelection" entry="EVT_CHOICE" />
 								</object>
-								<flag>wxALL|wxALIGN_CENTER_VERTICAL</flag>
+								<flag>wxALL|wxALIGN_TOP</flag>
 								<border>5</border>
 								<option>1</option>
 							</object>
@@ -38,7 +41,7 @@
 								<object class="wxChoice" name="ID_CHOICE2" variable="Destination" member="yes">
 									<handler function="OnHDDsSelection" entry="EVT_CHOICE" />
 								</object>
-								<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+								<flag>wxALL|wxALIGN_TOP</flag>
 								<border>5</border>
 								<option>1</option>
 							</object>
@@ -53,12 +56,19 @@
 				<option>1</option>
 			</object>
 			<object class="sizeritem">
-				<object class="wxButton" name="ID_BUTTON1" variable="Transfer" member="yes">
-					<label>Transfer games</label>
-					<enabled>0</enabled>
-					<handler function="OnTransferClick" entry="EVT_BUTTON" />
+				<object class="wxBoxSizer" variable="BoxSizer2" member="no">
+					<object class="sizeritem">
+						<object class="wxButton" name="ID_BUTTON1" variable="Transfer" member="yes">
+							<label>Transfer games</label>
+							<enabled>0</enabled>
+							<handler function="OnTransferClick" entry="EVT_BUTTON" />
+						</object>
+						<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+						<border>5</border>
+						<option>1</option>
+					</object>
 				</object>
-				<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+				<flag>wxALL|wxEXPAND</flag>
 				<border>5</border>
 				<option>1</option>
 			</object>
