--- a/HDL-Batch-installer-SRC/wxsmith/MD5Report.wxs
+++ b/HDL-Batch-installer-SRC/wxsmith/MD5Report.wxs
@@ -10,7 +10,8 @@
 			<growablecols>0</growablecols>
 			<growablerows>0</growablerows>
 			<object class="sizeritem">
-				<object class="wxBoxSizer" variable="BoxSizer1" member="no">
+				<object class="wxStaticBoxSizer" variable="StaticBoxSizer1" member="no">
+					<label>Filename</label>
 					<object class="sizeritem">
 						<object class="wxStaticText" name="ID_STATICTEXT1" variable="FILENAME" member="yes">
 							<label></label>
