--- a/HDL-Batch-installer-SRC/wxsmith/ArtMan.wxs
+++ b/HDL-Batch-installer-SRC/wxsmith/ArtMan.wxs
@@ -138,6 +138,15 @@
 				<option>1</option>
 			</object>
 			<object class="sizeritem">
+				<object class="wxCheckBox" name="ID_CHECKBOX13" variable="CheckCERT" member="yes">
+					<label>Artwork certificate fix</label>
+					<tooltip>Attempts connections to archive.org for artwork download without certificate checks</tooltip>
+				</object>
+				<flag>wxALL|wxEXPAND</flag>
+				<border>5</border>
+				<option>1</option>
+			</object>
+			<object class="sizeritem">
 				<object class="wxTextCtrl" name="ID_TEXTCTRL1" variable="TextCtrl1" member="yes">
 					<maxlength>32</maxlength>
 					<style>wxTE_READONLY</style>
